  bios/config.h) (LVL)
- new setjmp/longjmp replacing older ones (LVL)
- updated todo list (LVL)
- started fastram support in bdos (LVL)
- fixed some function prototypes in bios.c (LVL)
- removed cli/Makefile (LVL)
- implemented the font_ring as 3 lists of linked fontheaders (MAD)
- documented all tosvars in bios/tosvar.h till 0x5b0 (MAD)

20. Jan. 2002
- in bios/lineainit.c there is now the sysfonts array for linea.
  font_ring is not longer used by linea (MAD).
- keyboard reset (Alt+Ctrl+Del(+RShift)) implemented (joy)
- trying to get 16-bit sector number working in BDOS - one workaround
  in fsbuf.c makes DIR (fsfirst/fsnext) working correctly (it seems).
  The NEGATIVE_RECN value (currently -200) should be fixed when it will be
  clear what is FAT/DIR negative recn and what is unsigned recn in signed int.
  FAT traversing seems to be broken (Pexec fails for some files) (joy)
- blkdev.h: retrying in emulator is not necessary (joy)
- blkdev.c: 16-bit recn should work now (joy)

21. Jan. 2002
- in bios/lineainit.c: removed font_ring initialization (MAD)
- re-wrote completely Pexec() for header flags support. I kept the old routine
  for reference, but ultimately it will go away. Fastram is allocated when 
  requested but it is still not freed (the *term routines in proc need to
  be changed as well); Pexec() flag 6 supported. I did not test on Fastram but
  all of autoexec, EmuCON, loading progs from C: and A: work. (LVL)

22. Jan. 2002
- untested ttram-compliant internal memory stuff in proc.c (LVL)
- cleaned up bios/biosmem.c:bmem_init, removed old _b_mdx from startup.S (MAD)
- put diskbuf from startup.S to floppy.c, made dskbufp a pointer (MAD)
- put parallel and serial output funcs from asm to chardev.c (MAD)
- put cpu_init(), cooki_init() and machine_init() to the beginning of the 
  C-startup procedure of bios.c (MAD)
- TT-RAM is added to BDOS memory by calling Maddalt (should be changed) (joy)
- free TT-RAM is displayed in initinfo.c (joy)